--- a/en/assets/sections/start-here.css
+++ b/en/assets/sections/start-here.css
@@ -1,3 +1,105 @@
+
+  .timer-section .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+  .content p{
+    color: #fff !important;
+  }
+  .timer-section .timer-container {
+    list-style: none;
+  }
+  .timer-section .timer {
+    list-style: none;
+    position: relative;
+    max-width: 750px;
+    margin: auto;
+  }
+  .timer-section .timer::before {
+    /* content: ''; */
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    background-color: #F2F2F2;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .timer-section .timer .step {
+    width: 50%;
+    padding: 20px 15px;
+    position: relative;
+    background-color: #0000007e;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .04);
+  }
+  .timer-section .timer .step:not(:first-child),
+  .timer-section .timer .step:not(:last-child) {
+    margin: 90px 0 60px 0;
+  }
+  .timer-section .timer .step:nth-child(odd) {
+    transform: translateX(100%);
+    border-left: 2px solid lightblue;
+    border-radius: 0 3px 3px 0;
+  }
+  .timer-section .timer .step:nth-child(even) {
+    border-right: 2px solid lightsalmon;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  .timer-section .timer .step > span {
+    position: absolute;
+    height: 26px;
+    width: 25px;
+    color: #333;
+    background-color: #F2F2F2;
+    text-align: center;
+    line-height: 22px;
+    border-radius: 3px;
+    font-size: .8rem;
+  }
+  .timer-section .timer .step:nth-child(odd) > span {
+    top: -40px;
+    left: -13px;
+    border: 2px solid lightblue;
+  }
+  .timer-section .timer .step:nth-child(even) > span {
+    top: -40px;
+    right: -13px;
+    border: 2px solid lightsalmon;
+  }
+  
+  .timer-section .timer .step h3 {
+    margin-bottom: 15px;
+  }
+  .timer-section .timer .step p {
+    font-weight: 300;
+    font-size: .85rem;
+    color: #555;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .timer-section .timer .step {
+      width: 100%;
+      text-align: center;
+      transform: translateX(0%);
+      border-radius: 3px !important;
+    }
+    .timer-section .timer .step:nth-child(odd) {
+      transform: translateX(0%);
+      border: none;
+      border-top: 2px solid lightblue;
+    }
+    .timer-section .timer .step:nth-child(even) {
+      border: none;
+      border-top: 2px solid lightsalmon;
+    }
+    .timer-section .timer .step span {
+      left: 50% !important;
+      transform: translateX(-50%);
+    }
+  }
+
 .controls-container {
     width: 80%;
     margin: 0 auto;
@@ -14,7 +116,7 @@
 
 .start-container {
     width: 70%;
-    min-height: 2000px;
+    min-height: 3000px;
     margin: 20px auto;
 }
 
@@ -43,7 +145,6 @@
     position: absolute;
     top: 0;
     right: 0;
-    text-align: center;
     transition: 1s clip-path;
     height: 100%;
     width: 100%;
@@ -51,6 +152,7 @@
 
 .start-container--slider h1 {
     font-size: 3rem;
+    text-align: center;
 }
 
 .start-container--slider p {
@@ -67,4 +169,9 @@
 
 .clip-0 {
     clip-path: inset(0 0 0 100%);
+}
+
+.process-separator {
+    display: flex;
+    gap: 50px;
 }
