--- a/en/assets/style.css
+++ b/en/assets/style.css
@@ -12570,7 +12570,6 @@ body.home .footer {
 .footer p, .footer a:not(.button), .footer span {
     font-family: "Montserrat";
     color: #fefefe;
-    text-align: center;
     line-height: 1.8;
     font-size: .75rem
 }
@@ -18193,7 +18192,6 @@ button.swiper-pagination-bullet {
     width: 50%;
     height: 400px;
     margin: 0 auto;
-    z-index: 50;
 }
 
 .home-section {
@@ -18251,7 +18249,7 @@ button.swiper-pagination-bullet {
     width: 100%;
     height: 100vh;
     top: 20px;
-    z-index: 2000;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -18364,4 +18362,95 @@ button.swiper-pagination-bullet {
 
 .dp-flex {
     display: flex !important;
+}
+
+.footer h1, .footer h2 {
+    color: #fff;
+}
+
+.footer h1 {
+    font-size: 2rem;
+}
+
+.footer h2 {
+    font-size: 1.5rem;
+    font-style: italic;
+}
+
+.footer h4 {
+    color: #fff;
+}
+
+.footer-center {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-center--container-left {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-center--container-right {
+    display: flex;
+    width: 700px;
+    gap: 50px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.footer-center--container {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer-center--container h4 {
+    font-size: 1rem;
+    text-transform: capitalize;
+}
+.footer-center--container a {
+    font-size: 0.9rem !important;
+}
+
+.footer-center--container:nth-child(2) {
+    display: inline-block;
+}
+
+.footer-center--container:nth-child(2) img {
+    margin-left: 5px;
+}
+
+.footer-bottom {
+    margin-top: 50px;
+}
+
+.max-footer {
+    width: 90%;
+    margin: 0 auto;
+    max-width: 1600px;
+}
+
+@media (max-width: 1200px){
+    .footer-top  {
+        text-align: center;
+    }
+    .footer-center {
+        justify-content: center;
+    }
+    .footer-center--container-left {
+        margin: 20px 0;
+    }
+    .footer-center--container-right {
+        justify-content: space-between;
+        width: 90%;
+    }
+}
+
+@media (max-width: 400px){
+    .footer-bottom {
+        text-align: center;
+    }
 }
