--- a/en/assets/sections/start-here.css
+++ b/en/assets/sections/start-here.css
@@ -267,6 +267,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
     transform: translateX(-10px);
+    position: relative;
+    top: 50%;
+  }
+  .slide-1 .slider-content:first-child {
+    margin-left: 0;
+  }
+  .slider-content:first-child {
+    margin-left: 0;
   }
   .slider-left-controls .controls-bar {
     display: none;
