--- a/en/assets/style.css
+++ b/en/assets/style.css
@@ -18384,7 +18384,6 @@ button.swiper-pagination-bullet {
 
 .footer-center {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .footer-center--container-left {
@@ -18397,7 +18396,8 @@ button.swiper-pagination-bullet {
     display: flex;
     width: 700px;
     gap: 70px;
-    justify-content: flex-start;
+    justify-content: space-between;
+    flex-grow: 1;
     flex-wrap: wrap;
     margin-left: 100px;
 }
@@ -18431,8 +18431,14 @@ button.swiper-pagination-bullet {
 .max-footer {
     width: 90%;
     margin: 0 auto;
-    max-width: 1600px;
+    max-width: 1400px;
 }
+@media (min-width: 1500px){
+    .max-footer {
+        width: 80%;
+    }
+}
+
 @media (max-width: 1350px){
     .footer-center--container-right {
         margin-left: 20px;
